[gd_scene load_steps=13 format=3]

[ext_resource type="PackedScene" uid="uid://bp5dr3h8j1x2w" path="res://Scene/Base/BaseThroughLevel.tscn" id="1"]
[ext_resource type="Script" path="res://Script/Level/Level_26.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://nm7nydea4dbs" path="res://Scene/Level/stagextwd.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://cir3xateowucr" path="res://Art/Level/Game3Level/Level_2_3/gmtw.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bfsn00ljl1ffw" path="res://Art/Level/Game3Level/Level_2_3/floorgmtw.png" id="5"]
[ext_resource type="PackedScene" uid="uid://dvc1yri6mbaj8" path="res://Scene/Level/xtwdtrap.tscn" id="6"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(951, 991)
script = null

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(1101.5, 991)
script = null

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(47, 991)
script = null

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(1437.5, 1473.5)
script = null

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(6040.75, 508)
script = null

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(729.75, 1420)
script = null

[node name="Level_26" instance=ExtResource( "1" )]
script = ExtResource( "2" )

[node name="stop1" type="CollisionShape2D" parent="wall" index="2"]
position = Vector2(1575.5, -15.5)
shape = SubResource( "1" )
metadata/_edit_lock_ = true

[node name="stop2" type="CollisionShape2D" parent="wall" index="3"]
position = Vector2(2802.25, -15)
shape = SubResource( "2" )
metadata/_edit_lock_ = true

[node name="stop3" type="CollisionShape2D" parent="wall" index="4"]
position = Vector2(3524, -15)
shape = SubResource( "3" )
metadata/_edit_lock_ = true

[node name="stop4" type="CollisionShape2D" parent="wall" index="5"]
position = Vector2(5318.25, 221.25)
shape = SubResource( "4" )
metadata/_edit_lock_ = true

[node name="floor" type="CollisionShape2D" parent="wall" index="6"]
position = Vector2(3016.63, 650)
shape = SubResource( "5" )
metadata/_edit_lock_ = true

[node name="stop5" type="CollisionShape2D" parent="wall" index="7"]
position = Vector2(3182.13, -211)
shape = SubResource( "6" )
disabled = true
metadata/_edit_lock_ = true

[node name="floor" type="Node2D" parent="." index="5"]
z_index = -1

[node name="stagextwd" parent="floor" index="0" instance=ExtResource( "3" )]
position = Vector2(388, 202)
metadata/_edit_lock_ = true

[node name="stagextwd2" parent="floor" index="1" instance=ExtResource( "3" )]
position = Vector2(1453, 206)
metadata/_edit_lock_ = true

[node name="stagextwd3" parent="floor" index="2" instance=ExtResource( "3" )]
position = Vector2(1846, 207)
metadata/_edit_lock_ = true

[node name="front" type="ParallaxLayer" parent="BackGround" index="1"]

[node name="Gmtw" type="Sprite2D" parent="BackGround/front" index="0"]
position = Vector2(2352, 296)
texture = ExtResource( "4" )
metadata/_edit_lock_ = true

[node name="Floorgmtw" type="Sprite2D" parent="BackGround/floor_2" index="0"]
position = Vector2(2349, 541)
texture = ExtResource( "5" )
metadata/_edit_lock_ = true

[node name="xtwdtrap" parent="." index="11" instance=ExtResource( "6" )]
position = Vector2(560, 384)
metadata/_edit_lock_ = true

[node name="xtwdtrap2" parent="." index="12" instance=ExtResource( "6" )]
position = Vector2(1229, 387)
metadata/_edit_lock_ = true

[node name="xtwdtrap3" parent="." index="13" instance=ExtResource( "6" )]
position = Vector2(1648, 391)
metadata/_edit_lock_ = true

[node name="xtwdtrap4" parent="." index="14" instance=ExtResource( "6" )]
position = Vector2(2056, 390)
metadata/_edit_lock_ = true

[node name="xtwdtrap5" parent="." index="15" instance=ExtResource( "6" )]
position = Vector2(2500, 385)
metadata/_edit_lock_ = true

[node name="xtwdtrap6" parent="." index="16" instance=ExtResource( "6" )]
position = Vector2(2700, 385)
metadata/_edit_lock_ = true

[node name="xtwdtrap7" parent="." index="17" instance=ExtResource( "6" )]
position = Vector2(2900, 385)
metadata/_edit_lock_ = true

[node name="xtwdtrap8" parent="." index="18" instance=ExtResource( "6" )]
position = Vector2(3100, 385)
metadata/_edit_lock_ = true

[node name="xtwdtrap9" parent="." index="19" instance=ExtResource( "6" )]
position = Vector2(3300, 385)
metadata/_edit_lock_ = true

[node name="xtwdtrap10" parent="." index="20" instance=ExtResource( "6" )]
position = Vector2(3800, 385)
metadata/_edit_lock_ = true

[node name="xtwdtrap11" parent="." index="21" instance=ExtResource( "6" )]
position = Vector2(4500, 385)
metadata/_edit_lock_ = true

[node name="exit" parent="." index="22"]
position = Vector2(4398, 321)
metadata/_edit_lock_ = true
